src/objects/Custom_Email_Template__c.object
<CustomObject>
    <description>Holds Email templates</description>
    <fields>
        <fullName>EmailBody__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailFrom__c</fullName>
        <label>Email From</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>Email Subject</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailToTest__c</fullName>
        <label>Email To(Test)</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Custom Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmailSubject__c</columns>
        <columns>EmailToTest__c</columns>
        <columns>EmailFrom__c</columns>
        <columns>EmailBody__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>